[gd_scene load_steps=7 format=4 uid="uid://cehspp60a65qw"]

[ext_resource type="Texture2D" uid="uid://be7ms75lgrwhn" path="res://assets/house.png" id="1_fyqlq"]
[ext_resource type="Script" uid="uid://nw568aog4mp6" path="res://map/map_1/map_1.gd" id="1_lfl1v"]
[ext_resource type="PackedScene" uid="uid://btt7spw8fmsj2" path="res://object/portal/portal.tscn" id="2_lfl1v"]
[ext_resource type="TileSet" uid="uid://bef25gvs46hcm" path="res://resource/tile_map.tres" id="4_l25oo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_74c6r"]
size = Vector2(480, 64)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_7784c"]

[node name="Map1" type="Node2D"]
script = ExtResource("1_lfl1v")

[node name="HouseInteriorMultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://n3uguejcx2wq")
spawn_path = NodePath("..")

[node name="MonsterMultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://dx43li2j7738k")
spawn_path = NodePath("../Monsters")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(462, 281)
texture = ExtResource("1_fyqlq")

[node name="Portal" parent="." instance=ExtResource("2_lfl1v")]
position = Vector2(432, 416)

[node name="StaticBody2D1" type="StaticBody2D" parent="."]
position = Vector2(464, 448)
collision_mask = 0
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D1"]
shape = SubResource("RectangleShape2D_74c6r")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D1"]
scale = Vector2(480, 64.000015)
texture = SubResource("PlaceholderTexture2D_7784c")

[node name="Monsters" type="Node" parent="."]

[node name="MonsterSpawnPositions" type="Node" parent="."]

[node name="MonsterSpawnPosition1" type="Marker2D" parent="MonsterSpawnPositions"]
position = Vector2(1248, 96)

[node name="MonsterSpawnPosition2" type="Marker2D" parent="MonsterSpawnPositions"]
position = Vector2(1376, 96)

[node name="MonsterSpawnPosition3" type="Marker2D" parent="MonsterSpawnPositions"]
position = Vector2(1440, 256)

[node name="MonsterSpawnPosition4" type="Marker2D" parent="MonsterSpawnPositions"]
position = Vector2(960, 256)

[node name="MonsterSpawnPosition5" type="Marker2D" parent="MonsterSpawnPositions"]
position = Vector2(1120, 256)

[node name="MonsterSpawnPosition6" type="Marker2D" parent="MonsterSpawnPositions"]
position = Vector2(1280, 256)

[node name="MonsterSpawnPosition7" type="Marker2D" parent="MonsterSpawnPositions"]
position = Vector2(928, 480)

[node name="MonsterSpawnPosition8" type="Marker2D" parent="MonsterSpawnPositions"]
position = Vector2(1168, 480)

[node name="MonsterSpawnPosition9" type="Marker2D" parent="MonsterSpawnPositions"]
position = Vector2(1408, 480)

[node name="MonsterSpawnPosition10" type="Marker2D" parent="MonsterSpawnPositions"]
position = Vector2(1024, -96)

[node name="MonsterSpawnPosition11" type="Marker2D" parent="MonsterSpawnPositions"]
position = Vector2(1312, -96)

[node name="TileMap" type="Node" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAAHABEAAQAFAAoAAAAHABAAAQAFAAMAAAAHAA8AAQAFAAEAAAAGABIAAQAEAAsAAAAGABEAAQAEAAoAAAAGABAAAQADAAMAAAAGAA8AAQADAAEAAAAFABIAAQADAAUAAAAFABEAAQADAAMAAAAFABAAAQADAAMAAAAFAA8AAQADAAEAAAAEABIAAQADAAUAAAAEABEAAQADAAMAAAAEABAAAQADAAMAAAAEAA8AAQADAAEAAAADABIAAQADAAUAAAADABEAAQADAAMAAAADABAAAQADAAMAAAADAA8AAQADAAEAAAACABIAAQADAAUAAAACABEAAQADAAMAAAACABAAAQADAAMAAAACAA8AAQADAAEAAAABABIAAQADAAUAAAABABEAAQADAAMAAAABABAAAQADAAMAAAABAA8AAQADAAEAAAAAABEAAQADAAMAAAAAABAAAQADAAMAAAAAAA8AAQADAAEAAAAAABIAAQADAAUAAAD//xIAAQADAAUAAAD//xEAAQADAAMAAAD//xAAAQADAAMAAAD//w8AAQADAAEAAAD+/xIAAQADAAUAAAD+/xEAAQADAAMAAAD+/xAAAQADAAMAAAD+/w8AAQADAAEAAAD9/xIAAQADAAUAAAD9/xEAAQADAAMAAAD9/xAAAQADAAMAAAD9/w8AAQADAAEAAAD8/xIAAQADAAUAAAD8/xEAAQADAAMAAAD8/xAAAQADAAMAAAD8/w8AAQADAAEAAAD7/xIAAQADAAUAAAD7/xEAAQADAAMAAAD7/xAAAQADAAMAAAD7/w8AAQADAAEAAAD6/xIAAQACAAsAAAD6/xEAAQABAAMAAAD6/xAAAQABAAMAAAD6/w8AAQABAAEAAAAGAAwAAQATAA4AAAAFAAwAAQADAAEAAQAEAAwAAQADAAEAAQADAAwAAQAPAA4AAAD//wwAAQATAA4AAAD+/wwAAQADAAEAAQD9/wwAAQADAAEAAQD8/wwAAQAPAA4AAAAlABIAAQADAAMAAAAlABEAAQADAAMAAAAlABAAAQADAAMAAAAlAA8AAQADAAEAAAAkABIAAQADAAMAAAAkABEAAQADAAMAAAAkABAAAQADAAMAAAAkAA8AAQADAAEAAAAjABIAAQADAAMAAAAjABEAAQADAAMAAAAjABAAAQADAAMAAAAjAA8AAQADAAEAAAAiABIAAQADAAMAAAAiABEAAQADAAMAAAAiABAAAQADAAMAAAAiAA8AAQADAAEAAAAhABIAAQADAAMAAAAhABEAAQADAAMAAAAhABAAAQADAAMAAAAhAA8AAQADAAEAAAAgABIAAQADAAMAAAAgABEAAQADAAMAAAAgABAAAQADAAMAAAAgAA8AAQADAAEAAAAfABIAAQADAAMAAAAfABEAAQADAAMAAAAfABAAAQADAAMAAAAfAA8AAQADAAEAAAAeABIAAQADAAMAAAAeABEAAQADAAMAAAAeABAAAQADAAMAAAAeAA8AAQADAAEAAAAdABIAAQADAAMAAAAdABEAAQADAAMAAAAdABAAAQADAAMAAAAdAA8AAQADAAEAAAAcABIAAQADAAMAAAAcABEAAQADAAMAAAAcABAAAQADAAMAAAAcAA8AAQADAAEAAAAbABIAAQADAAMAAAAbABEAAQADAAMAAAAbABAAAQADAAMAAAAbAA8AAQADAAEAAAAaABIAAQADAAMAAAAaABEAAQADAAMAAAAaABAAAQADAAMAAAAaAA8AAQADAAEAAAAZABEAAQADAAMAAAAZABAAAQADAAMAAAAZAA8AAQADAAEAAAApABIAAQADAAMAAAApABEAAQADAAMAAAApABAAAQADAAMAAAApAA8AAQADAAEAAAAoABIAAQADAAMAAAAoABEAAQADAAMAAAAoABAAAQADAAMAAAAoAA8AAQADAAEAAAAnABIAAQADAAMAAAAnABEAAQADAAMAAAAnABAAAQADAAMAAAAnAA8AAQADAAEAAAAmABIAAQADAAMAAAAmABEAAQADAAMAAAAmABAAAQADAAMAAAAmAA8AAQADAAEAAAArABIAAQADAAMAAAArABEAAQADAAMAAAArABAAAQADAAMAAAArAA8AAQADAAEAAAAqABIAAQADAAMAAAAqABEAAQADAAMAAAAqABAAAQADAAMAAAAqAA8AAQADAAEAAAABAA4AAQAKAAoAAAAdAA4AAQADAAcAAAD8/w4AAQADAAcAAAD9/wsAAQADAAcAAAAFAA4AAQADAAcAAAAwABIAAQADAAMAAAAwABEAAQADAAMAAAAwABAAAQADAAMAAAAwAA8AAQADAAEAAAAvABIAAQADAAMAAAAvABEAAQADAAMAAAAvABAAAQADAAMAAAAvAA8AAQADAAEAAAAuABIAAQADAAMAAAAuABEAAQADAAMAAAAuABAAAQADAAMAAAAuAA8AAQADAAEAAAAtABIAAQADAAMAAAAtABEAAQADAAMAAAAtABAAAQADAAMAAAAtAA8AAQADAAEAAAAsABIAAQADAAMAAAAsABEAAQADAAMAAAAsABAAAQADAAMAAAAsAA8AAQADAAEAAAAxABEAAQADAAMAAAAxABAAAQADAAMAAAAxAA8AAQAFAAEAAAAZABIAAQADAAMAAAAdABMAAQADAAUAAAAcABMAAQADAAUAAAAbABMAAQADAAUAAAAaABMAAQADAAUAAAAwABMAAQADAAUAAAAvABMAAQADAAUAAAAuABMAAQADAAUAAAAtABMAAQADAAUAAAAsABMAAQADAAUAAAArABMAAQADAAUAAAAqABMAAQADAAUAAAApABMAAQADAAUAAAAoABMAAQADAAUAAAAnABMAAQADAAUAAAAmABMAAQADAAUAAAAlABMAAQADAAUAAAAkABMAAQADAAUAAAAjABMAAQADAAUAAAAiABMAAQADAAUAAAAhABMAAQADAAUAAAAgABMAAQADAAUAAAAfABMAAQADAAUAAAAeABMAAQADAAUAAAAsAA4AAQADAAcAAAAlAA4AAQABAAcAAAAYAA8AAQADAAEAAAAYABAAAQADAAMAAAAYABEAAQADAAMAAAAYABIAAQADAAMAAAAZABMAAQADAAUAAAAXAA8AAQADAAEAAAAXABAAAQADAAMAAAAXABEAAQADAAMAAAAYABMAAQADAAUAAAAXABIAAQADAAMAAAAyAA8AAQATAA4AAAAyABAAAQAFAAMAAAAyABEAAQAFAAMAAAAWAA8AAQADAAEAAAAWABAAAQADAAMAAAAWABEAAQADAAMAAAAWABIAAQACAAoAAAAXABMAAQADAAUAAAAxABMAAQAEAAsAAAAxABIAAQAEAAoAAAAyABIAAQAEAAsAAAAwAA4AAQADAAcAAAAYAA4AAQABABQAAAAYAA0AAQABABQAAAAYAAwAAQABABQAAAAlAAgAAQADAAEAAQAmAAgAAQADAAEAAQAnAAgAAQADAAEAAQApAAUAAQAPAA4AAAAqAAUAAQADAAEAAQArAAUAAQATAA4AAAAaAAMAAQAPAA4AAAAaAAgAAQAPAA4AAAAbAAMAAQADAAEAAQAbAAgAAQADAAEAAQAcAAIAAQABAAcAAAAcAAMAAQADAAEAAQAcAAgAAQADAAEAAQAdAAMAAQADAAEAAQAdAAgAAQADAAEAAQAeAAMAAQADAAEAAQAeAAgAAQADAAEAAQAfAAMAAQADAAEAAQAfAAgAAQADAAEAAQAgAAMAAQATAA4AAAAgAAgAAQADAAEAAQAhAAgAAQADAAEAAQAiAAgAAQADAAEAAQAjAAMAAQAPAA4AAAAjAAgAAQADAAEAAQAkAAMAAQADAAEAAQAkAAgAAQADAAEAAQAlAAIAAQADAAcAAAAlAAMAAQADAAEAAQAlAAYAAQAPAA4AAAAmAAMAAQADAAEAAQAmAAYAAQADAAEAAQAnAAMAAQADAAEAAQAnAAYAAQATAA4AAAAoAAMAAQADAAEAAQAoAAgAAQADAAEAAQApAAMAAQADAAEAAQApAAgAAQADAAEAAQAqAAIAAQADAAcAAAAqAAMAAQADAAEAAQAqAAgAAQADAAEAAQArAAMAAQADAAEAAQArAAgAAQADAAEAAQAsAAMAAQADAAEAAQAsAAgAAQADAAEAAQAtAAMAAQADAAEAAQAtAAgAAQADAAEAAQAuAAIAAQADAAcAAAAuAAMAAQATAA4AAAAuAAgAAQADAAEAAQAvAAgAAQADAAEAAQAwAAgAAQATAA4AAAAaAPz/AQADAAcAAAAhAPz/AQABAAcAAAAnAPz/AQADAAcAAAArAPz/AQADAAcAAAAsAPz/AQADAAcAAAAZAP3/AQAPAA4AAAAaAP3/AQADAAEAAQAbAP3/AQADAAEAAQAcAP3/AQADAAEAAQAdAP3/AQADAAEAAQAeAP3/AQADAAEAAQAfAP3/AQADAAEAAQAgAP3/AQADAAEAAQAhAP3/AQADAAEAAQAiAP3/AQADAAEAAQAjAP3/AQADAAEAAQAkAP3/AQADAAEAAQAlAP3/AQADAAEAAQAmAP3/AQADAAEAAQAnAP3/AQADAAEAAQAoAP3/AQADAAEAAQApAP3/AQADAAEAAQAqAP3/AQADAAEAAQArAP3/AQADAAEAAQAsAP3/AQADAAEAAQAtAP3/AQADAAEAAQAuAP3/AQADAAEAAQAvAP3/AQATAA4AAAAVAA8AAQABAAEAAAAVABAAAQABAAMAAAAVABEAAQABAAMAAAAVABIAAQABAAoAAAAWABMAAQACAAsAAAA=")
tile_set = ExtResource("4_l25oo")

[node name="Ladder" type="TileMapLayer" parent="TileMap"]
position = Vector2(-64, 384)
tile_map_data = PackedByteArray("AAAAAAAAAQAHAAoAAAAAAAEAAQAHAAoAAAAAAAIAAQAHAAoAAAA=")
tile_set = ExtResource("4_l25oo")

[node name="Ladder2" type="TileMapLayer" parent="TileMap"]
position = Vector2(1056, 256)
tile_map_data = PackedByteArray("AAAAAAAAAQAHAAoAAAAAAAEAAQAHAAoAAAAAAAIAAQAHAAoAAAAAAAMAAQAHAAoAAAAAAAQAAQAHAAoAAAAAAAYAAQAHAAoAAAAAAAUAAQAHAAoAAAA=")
tile_set = ExtResource("4_l25oo")

[node name="Ladder3" type="TileMapLayer" parent="TileMap"]
position = Vector2(960, 96)
tile_map_data = PackedByteArray("AAAAAAAAAQAHAAoAAAAAAAEAAQAHAAoAAAAAAAIAAQAHAAoAAAAAAAMAAQAHAAoAAAAAAAQAAQAHAAoAAAA=")
tile_set = ExtResource("4_l25oo")

[node name="Ladder4" type="TileMapLayer" parent="TileMap"]
position = Vector2(1216, -96)
tile_map_data = PackedByteArray("AAAAAAEAAQAHAAoAAAAAAAIAAQAHAAoAAAAAAAMAAQAHAAoAAAAAAAQAAQAHAAoAAAAAAAAAAQAHAAoAAAAAAAUAAQAHAAoAAAA=")
tile_set = ExtResource("4_l25oo")

[node name="EnemyBlockLeft" type="TileMapLayer" parent="TileMap"]
visible = false
rotation = 4.712389
tile_map_data = PackedByteArray("AADz/zQAAQAJAAcAAQD0/zQAAQAJAAcAAQD1/zQAAQAJAAcAAQD2/zQAAQAJAAcAAQD3/zQAAQAJAAcAAQD4/zIAAQAJAAcAAQD4/zQAAQAJAAcAAQD5/zQAAQAJAAcAAQD6/zQAAQAJAAcAAQD5/zIAAQAJAAcAAQD6/zIAAQAJAAcAAQD7/y0AAQAJAAcAAQD9/zAAAQAJAAcAAQDx/zQAAQAJAAcAAQDy/zQAAQAJAAcAAQD9/yIAAQAJAAcAAQAEADEAAQAJAAcAAQAFADEAAQAJAAcAAQADADEAAQAJAAcAAQA=")
tile_set = ExtResource("4_l25oo")

[node name="EnemyBlockRight" type="TileMapLayer" parent="TileMap"]
visible = false
rotation = 1.5707964
tile_map_data = PackedByteArray("AAAMAOr/AQAJAAcAAQANAOr/AQAJAAcAAQALAOr/AQAJAAcAAQAKAOr/AQAJAAcAAQAJAOr/AQAJAAcAAQAIAOr/AQAJAAcAAQAHAOr/AQAJAAcAAQAGAOr/AQAJAAcAAQAFAOr/AQAJAAcAAQACAOf/AQAJAAcAAQAHAOf/AQAJAAcAAQACAN7/AQAJAAcAAQD6/+j/AQAJAAcAAQD7/+j/AQAJAAcAAQD8/+j/AQAJAAcAAQA=")
tile_set = ExtResource("4_l25oo")
